--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,9 @@
 environment:
   matrix:
     # node.js
+    - nodejs_version: "9"
+    - nodejs_version: "8"
+    - nodejs_version: "7"
     - nodejs_version: "6"
     - nodejs_version: "5"
     - nodejs_version: "4"
@@ -14,7 +17,7 @@ install:
 
 test_script:
   - node --version
-  - npm -version
+  - npm --version
   - cmd: npm test
 
 build: off
