Build: Change webpack configuration for minimization

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,9 @@
 environment:
   matrix:
     # node.js
+    - nodejs_version: "12"
+    - nodejs_version: "11"
+    - nodejs_version: "10"
     - nodejs_version: "9"
     - nodejs_version: "8"
     - nodejs_version: "7"
@@ -12,7 +15,8 @@ environment:
     - nodejs_version: "4"
 
 install:
-  - ps: Install-Product node $env:nodejs_version
+  # https://www.appveyor.com/docs/lang/nodejs-iojs/#installing-any-version-of-nodejs-or-iojs
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version) $env:PLATFORM
   - npm install
 
 test_script:
