--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
     "semver": "^6.2.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.35.2",
     "webpack-stream": "^5.2.1"
