--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,14 +9,10 @@ environment:
     - nodejs_version: "10"
     - nodejs_version: "9"
     - nodejs_version: "8"
-    - nodejs_version: "7"
-    - nodejs_version: "6"
-    - nodejs_version: "5"
-    - nodejs_version: "4"
 
 install:
   # https://www.appveyor.com/docs/lang/nodejs-iojs/#installing-any-version-of-nodejs-or-iojs
-  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version) $env:PLATFORM
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
   - npm install
 
 test_script:
