--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-spawn-mocha": "^5.0.1",
     "istanbul": "^0.4.5",
+    "mem": ">=4.0.0",
     "mocha": "^6.1.4",
     "semver": "^6.2.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
